--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.4.3",
+    "@heroicons/react": "^1.0.5",
     "@tailwindcss/forms": "^0.4.0",
     "next": "12.0.8",
     "react": "17.0.2",
