--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@headlessui/react": "^1.4.3",
     "@heroicons/react": "^1.0.5",
     "@tailwindcss/forms": "^0.4.0",
+    "axios": "^0.24.0",
     "faunadb": "^4.4.1",
     "next": "12.0.8",
     "react": "17.0.2",
