--- a/package.json
+++ b/package.json
@@ -1,29 +1,32 @@
 {
-  "name": "next-budget-app",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@auth0/nextjs-auth0": "^1.7.0",
-    "@headlessui/react": "^1.4.3",
-    "@heroicons/react": "^1.0.5",
-    "@tailwindcss/forms": "^0.4.0",
-    "axios": "^0.24.0",
-    "faunadb": "^4.4.1",
-    "next": "12.0.8",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "swr": "^1.1.2"
-  },
-  "devDependencies": {
-    "autoprefixer": "^10.4.2",
-    "eslint": "8.6.0",
-    "eslint-config-next": "12.0.8",
-    "postcss": "^8.4.5",
-    "tailwindcss": "^3.0.15"
-  }
+	"name": "next-budget-app",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"@auth0/nextjs-auth0": "^1.9.1",
+		"@headlessui/react": "^1.6.6",
+		"@heroicons/react": "^1.0.6",
+		"axios": "^0.24.0",
+		"faunadb": "^4.6.0",
+		"next": "^12.2.3",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"swr": "^1.3.0"
+	},
+	"devDependencies": {
+		"@tailwindcss/forms": "^0.5.2",
+		"autoprefixer": "^10.4.7",
+		"eslint": "8.6.0",
+		"eslint-config-next": "12.0.8",
+		"postcss": "^8.4.14",
+		"tailwindcss": "^3.1.6"
+	},
+	"overrides": {
+		"autoprefixer": "10.4.5"
+	}
 }
