--- a/package.json
+++ b/package.json
@@ -9,21 +9,21 @@
 	},
 	"dependencies": {
 		"@auth0/nextjs-auth0": "^1.9.3",
-		"@headlessui/react": "^1.7.13",
-		"@heroicons/react": "^1.0.6",
-		"axios": "^0.24.0",
+		"@headlessui/react": "^1.7.18",
+		"@heroicons/react": "^2.1.1",
+		"axios": "^1.6.7",
 		"faunadb": "^4.8.0",
 		"next": "^12.3.4",
-		"react": "^18.2.0",
-		"react-dom": "^18.2.0",
-		"swr": "^1.3.0"
+		"react": "^17.0.2",
+		"react-dom": "^17.0.2",
+		"swr": "^2.2.5"
 	},
 	"devDependencies": {
-		"@tailwindcss/forms": "^0.5.3",
-		"autoprefixer": "^10.4.14",
+		"@tailwindcss/forms": "^0.5.7",
+		"autoprefixer": "^10.4.18",
 		"eslint": "8.6.0",
-		"eslint-config-next": "12.0.8",
-		"postcss": "^8.4.23",
-		"tailwindcss": "^3.3.1"
+		"eslint-config-next": "^12.3.4",
+		"postcss": "^8.4.35",
+		"tailwindcss": "^3.4.1"
 	}
 }
