--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
 	"dependencies": {
 		"@auth0/nextjs-auth0": "^1.9.3",
 		"@headlessui/react": "^1.7.18",
+		"@headlessui/tailwindcss": "^0.2.0",
 		"@heroicons/react": "^2.1.1",
 		"axios": "^1.6.7",
 		"faunadb": "^4.8.0",
+		"i18next": "^23.10.0",
 		"next": "^12.3.4",
+		"next-i18next": "^15.2.0",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
+		"react-i18next": "^14.0.8",
 		"swr": "^2.2.5"
 	},
 	"devDependencies": {
