--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
 		"axios": "^1.6.7",
 		"faunadb": "^4.8.0",
 		"i18next": "^23.10.0",
+		"mailgun-js": "^0.22.0",
 		"next": "^12.3.4",
 		"next-i18next": "^15.2.0",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-i18next": "^14.0.8",
+		"react-tooltip": "^5.26.3",
 		"swr": "^2.2.5"
 	},
 	"devDependencies": {
